# rust_student_list_management

./: Cargo.toml  README.md  main.rs
backend/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: auth.rs  controllers.rs  database.rs  main.rs  models.rs
frontend/src/app/: page.tsx
frontend/src/components/: AddStudentForm.tsx  Statistics.tsx  StudentList.tsx
frontend/src/lib/: api.ts
src/: main.rs
